force-app/main/default/objects/WarrantyAPIConfig__mdt/WarrantyAPIConfig__mdt.object-meta.xml
<CustomObject>
    <label>Warranty API Config</label>
    <pluralLabel>Warranty API Configs</pluralLabel>
</CustomObject>