force-app/main/default/objects/WarrantyAPIConfig__mdt/fields/Authorization_Key__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Key__c</fullName>
    <label>Authorization Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>