force-app/main/default/objects/WarrantyAPIConfig__mdt/fields/Cookie__c.field-meta.xml
<CustomField>
    <fullName>Cookie__c</fullName>
    <label>Cookie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>